Footer CSS fixed on mobiles, Cloud is no longer home link

--- a/web/app/themes/Quick-Portfolio/assets/styles/layouts/_footer.scss
+++ b/web/app/themes/Quick-Portfolio/assets/styles/layouts/_footer.scss
@@ -307,6 +307,7 @@ footer.content-info{
           }
           @include small{
             background-color: $brand-primary;
+            color: $brand-secondary;
           }
         }
       }
